--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -348,6 +348,8 @@
 %     \exp_args:Nco,
 %     \exp_args:Ncf,
 %     \exp_args:Ncc,
+%     \exp_args:NcV,
+%     \exp_args:Ncv,
 %     \exp_args:NVV
 %   }
 %   \begin{syntax}
@@ -363,12 +365,14 @@
 %   {
 %     \exp_args:Nno,
 %     \exp_args:NnV,
+%     \exp_args:Nnv,
 %     \exp_args:Nnf,
 %     \exp_args:Noo,
 %     \exp_args:Nof,
 %     \exp_args:Noc,
-%     \exp_args:Nff,
 %     \exp_args:Nfo,
+%     \exp_args:Nff,
+%     \exp_args:NVo,
 %     \exp_args:Nnc
 %   }
 %   \begin{syntax}
@@ -422,11 +426,22 @@
 %
 % \begin{function}[EXP]
 %   {
-%     \exp_args:NNoo,
+%     \exp_args:NNcf,
 %     \exp_args:NNno,
+%     \exp_args:NNnV,
+%     \exp_args:NNoo,
+%     \exp_args:NNVV,
+%     \exp_args:Ncno,
+%     \exp_args:NcnV,
+%     \exp_args:Ncoo,
+%     \exp_args:NcVV,
 %     \exp_args:Nnno,
 %     \exp_args:Nnnc,
+%     \exp_args:Nnnf,
+%     \exp_args:Nnff,
 %     \exp_args:Nooo,
+%     \exp_args:Noof,
+%     \exp_args:Nffo,
 %   }
 %   \begin{syntax}
 %     \cs{exp_args:NNoo} \meta{token_1} \meta{token_2} \Arg{token_3} \Arg{tokens}
@@ -1099,7 +1114,7 @@
 %   {
 %     \exp_args:NNV, \exp_args:NNv, \exp_args:NNf,
 %     \exp_args:NVV,
-%     \exp_args:Ncf, \exp_args:Nco
+%     \exp_args:Ncf, \exp_args:Nco, \exp_args:NcV, \exp_args:NcV
 %   }
 %   Some more hand-tuned function with three arguments.
 %   If we forced that an |o| argument always has braces,
@@ -1135,6 +1150,18 @@
     \exp_after:wN #1
     \cs:w #2 \exp_after:wN \cs_end:
     \exp_after:wN { \exp:w \exp_end_continue_f:w #3 }
+  }
+\cs_new:Npn \exp_args:NcV #1#2#3
+  {
+    \exp_after:wN #1
+    \cs:w #2 \exp_after:wN \cs_end:
+    \exp_after:wN { \exp:w \@@_eval_register:N #3 }
+  }
+\cs_new:Npn \exp_args:Ncv #1#2#3
+  {
+    \exp_after:wN #1
+    \cs:w #2 \exp_after:wN \cs_end:
+    \exp_after:wN { \exp:w \@@_eval_register:c {#3} }
   }
 \cs_new:Npn \exp_args:NVV #1#2#3
   {
@@ -1200,7 +1227,8 @@
 % \begin{macro}[EXP]
 %   {
 %     \exp_args:Nnc, \exp_args:Nfo, \exp_args:Nff, \exp_args:Nnf,
-%     \exp_args:Nno, \exp_args:NnV, \exp_args:Noo, \exp_args:Nof,
+%     \exp_args:NVo,
+%     \exp_args:Nno, \exp_args:NnV, \exp_args:Nnv, \exp_args:Noo, \exp_args:Nof,
 %     \exp_args:Noc
 %   }
 % \begin{macro}
@@ -1217,9 +1245,11 @@
 \cs_new:Npn \exp_args:Nnf { \::n \::f \::: }
 \cs_new:Npn \exp_args:Nno { \::n \::o \::: }
 \cs_new:Npn \exp_args:NnV { \::n \::V \::: }
+\cs_new:Npn \exp_args:Nnv { \::n \::v \::: }
 \cs_new:Npn \exp_args:Noo { \::o \::o \::: }
 \cs_new:Npn \exp_args:Nof { \::o \::f \::: }
 \cs_new:Npn \exp_args:Noc { \::o \::c \::: }
+\cs_new:Npn \exp_args:NVo { \::V \::o \::: }
 \cs_new_protected:Npn \exp_args:NNx { \::N \::x \::: }
 \cs_new_protected:Npn \exp_args:Ncx { \::c \::x \::: }
 \cs_new_protected:Npn \exp_args:Nnx { \::n \::x \::: }
@@ -1232,8 +1262,11 @@
 %
 % \begin{macro}[EXP]
 %   {
-%     \exp_args:NNno, \exp_args:NNoo,
-%     \exp_args:Nnnc, \exp_args:Nnno, \exp_args:Nooo,
+%     \exp_args:NNcf,
+%     \exp_args:NNno, \exp_args:NNnV, \exp_args:NNoo, \exp_args:NNVV,
+%     \exp_args:Ncno, \exp_args:NcnV, \exp_args:Ncoo, \exp_args:NcVV,
+%     \exp_args:Nnnc, \exp_args:Nnno, \exp_args:Nnnf, \exp_args:Nnff,
+%     \exp_args:Nooo, \exp_args:Noof, \exp_args:Nffo,
 %   }
 % \begin{macro}
 %   {
@@ -1242,11 +1275,22 @@
 %     \exp_args:Nccx, \exp_args:Ncnx, \exp_args:Noox,
 %   }
 %    \begin{macrocode}
+\cs_new:Npn \exp_args:NNcf { \::N \::c \::f \::: }
 \cs_new:Npn \exp_args:NNno { \::N \::n \::o \::: }
+\cs_new:Npn \exp_args:NNnV { \::N \::n \::V \::: }
 \cs_new:Npn \exp_args:NNoo { \::N \::o \::o \::: }
+\cs_new:Npn \exp_args:NNVV { \::N \::V \::V \::: }
+\cs_new:Npn \exp_args:Ncno { \::c \::n \::o \::: }
+\cs_new:Npn \exp_args:NcnV { \::c \::n \::V \::: }
+\cs_new:Npn \exp_args:Ncoo { \::c \::o \::o \::: }
+\cs_new:Npn \exp_args:NcVV { \::c \::V \::V \::: }
 \cs_new:Npn \exp_args:Nnnc { \::n \::n \::c \::: }
 \cs_new:Npn \exp_args:Nnno { \::n \::n \::o \::: }
+\cs_new:Npn \exp_args:Nnnf { \::n \::n \::f \::: }
+\cs_new:Npn \exp_args:Nnff { \::n \::f \::f \::: }
 \cs_new:Npn \exp_args:Nooo { \::o \::o \::o \::: }
+\cs_new:Npn \exp_args:Noof { \::o \::o \::f \::: }
+\cs_new:Npn \exp_args:Nffo { \::f \::f \::o \::: }
 \cs_new_protected:Npn \exp_args:NNNx { \::N \::N \::x \::: }
 \cs_new_protected:Npn \exp_args:NNnx { \::N \::n \::x \::: }
 \cs_new_protected:Npn \exp_args:NNox { \::N \::o \::x \::: }
