Fix \spacefactor after \cs or \cmd

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -1867,7 +1867,9 @@ and all files in that bundle must be distributed together.
 %   rescanning the whole argument.  Then typeset the command in
 %   \tn{verbatim@font}, after turning it to harmless characters if
 %   needed (and keeping the underscore breakable); in any case, spaces
-%   must be turned into \tn{@xobeysp}.  Finally, produce an index entry.
+%   must be turned into \tn{@xobeysp} and we must use \tn{@} to avoid
+%   longer spaces after a control sequence that ends for instance with a
+%   colon (empty signature).  Finally, produce an index entry.
 %   Indexing is suppressed when \cs{l_@@_cmd_noindex_bool} is true.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_cmd:nn #1#2
@@ -1896,6 +1898,7 @@ and all files in that bundle must be distributed together.
         }
       \tl_replace_all:Nnn \l_@@_cmd_tl { ~ } { \@xobeysp }
       \l_@@_cmd_tl
+      \@
     }
     \bool_if:NF \l_@@_cmd_noindex_bool
       {
