For N to o and n to c variant changes, only produce a warning (see #418)
Third-party code would otherwise break.

--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -1710,6 +1710,7 @@
 %     \@@_generate_variant_loop_end:nwwwNNnn,
 %     \@@_generate_variant_loop_long:wNNnn,
 %     \@@_generate_variant_loop_invalid:NNwNNnn,
+%     \@@_generate_variant_loop_special:NNwNNnn
 %   }
 %   \begin{arguments}
 %     \item Last few consecutive letters common between the base and
@@ -1762,12 +1763,26 @@
 %   breaking function takes the empty brace group in |#4| as its first
 %   argument: this empty brace group produces the correct signature for
 %   the full variant.
+%
+%   Since people seem to have tried generating |c|-type variants of
+%   |n|-type arguments, and |o|-type variants of |N|-type arguments, in
+%   those cases we only produce a warning.  Once we have waited long
+%   enough the first construction involving
+%   \cs{@@_generate_variant_loop_special:NNwNNnn} should be removed.
 %    \begin{macrocode}
 \cs_new:Npn \@@_generate_variant_loop:nNwN #1#2#3 \q_mark #4
   {
     \if:w #2 #4
       \exp_after:wN \@@_generate_variant_loop_same:w
     \else:
+      \if:w 0
+        \if:w n #4 \if:w c #2 1 \fi: \fi:
+        \if:w N #4 \if:w o #2 1 \fi: \fi:
+        0
+      \else:
+        \@@_generate_variant_loop_special:NNwNNnn #4#2
+        \exp_after:wN \reverse_if:N
+      \fi:
       \if:w #4
         \if:w c #2 N \else:
           \if:w o #2 n \else:
@@ -1831,6 +1846,15 @@
         \q_stop
         #5
         #5
+      }
+  }
+\cs_new:Npn \@@_generate_variant_loop_special:NNwNNnn #1#2#3 \q_stop #4#5#6#7
+  {
+    #3 \q_stop #4 #5 {#6} {#7}
+    \exp_not:n
+      {
+        \__msg_kernel_warning:nnxxxx { kernel } { invalid-variant }
+          {#7} { \token_to_str:N #5 } {#1} {#2}
       }
   }
 %    \end{macrocode}
